reglage du bug de la double scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -109,6 +109,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 10px;
     z-index: 100;
 }
 
@@ -225,6 +226,7 @@ body {
 .cibles {
     position: relative;
     width: 100%;
+    min-height: 400px;
     margin-top: 20px;
 }
 
@@ -241,16 +243,8 @@ body {
     background-color: #fff;
     box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.292);
     opacity: 0;
-    /* transform: translateX(-100%); */
-    transition: opacity 0.8s, transform 0.1s;
-}
-
-.trans-l {
     transform: translateX(-100%);
-}
-
-.trans-r {
-    transform: translateX(100%);
+    transition: opacity 0.8s, transform 0.4s;
 }
 
 .cible.active {
